--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,16 +2,26 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "dist",
+    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
+    "sourceMap": true,
+    "allowJs": true,
     "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "moduleResolution": "node",
+    "removeComments": true,
     "noUnusedLocals": true,
-    "esModuleInterop": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noUncheckedIndexedAccess": true,
-    "skipLibCheck": true
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "outDir": "./dist"
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*.test.ts"]
