--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
+    "@mui/system": "^5.14.5",
+    "@mui/x-data-grid": "^6.11.2",
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
