--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.5",
     "@mui/system": "^5.14.5",
     "@mui/x-data-grid": "^6.11.2",
+    "@nivo/geo": "^0.83.0",
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
