--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "5.0.0-beta.12",
     "@mui/material": "^5.14.5",
     "@mui/system": "^5.14.5",
     "@mui/x-data-grid": "^6.11.2",
+    "@mui/x-date-pickers": "^6.12.0",
     "@nivo/geo": "^0.83.0",
     "@nivo/line": "^0.83.0",
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
