--- a/web/package.json
+++ b/web/package.json
@@ -19,9 +19,11 @@
     "@mui/x-date-pickers": "^6.12.0",
     "@nivo/geo": "^0.83.0",
     "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
