--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "rm -rdf dist && swc ./src -d dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "ts-node seed.ts"
   },
   "keywords": [],
   "author": "",
